Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-680

block cache limit seems to not be fully respected

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Private Beta
    • 1.4.0
    • tablet
    • None

    Description

      The ITBLL cluster configures block cache capacity to 512MB, but the memtracker is reporting 685MB of usage. It's clearly not un-bounded, because this server has been up for days doing lots of work, but we're either not properly counting the memory, or not properly respecting the configured limit. Maybe we're only counting the values and not the keys, or something of that nature.

      Attachments

        1. screenshot-2.png
          78 kB
          Todd Lipcon
        2. screenshot-1.png
          80 kB
          Todd Lipcon

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: